18 May 2020: Wouter
	- For PR #93: dynlibmod can handle reloads and deinit and inits again,
	  with dlclose and dlopen of the library again.  Also for multiple
	  modules.  Fix memory leak by not closing dlopened content.  Fix
	  to allow one dynlibmod instance by unbound-checkconf.
	- For PR #93: checkconf allow multiple dynlib in module-config, for
	  a couple cases.

15 May 2020: Wouter
	- Merge PR #93: Add dynamic library support.
	- Fixed conflicts for PR #93 and make configure, yacc, lex.
	- For PR #93: Fix warnings for dynlibmodule.

15 May 2020: Ralph
	- Cache ECS answers with longest scope of CNAME chain.

22 April 2020: George
	- Explicitly use 'rrset-roundrobin: no' for test cases.

21 April 2020: Wouter
	- Merge #225 from akhait: KSK-2010 has been revoked. It removes the
	  KSK-2010 from the default list in unbound-anchor, now that the
	  revocation period is over.  KSK-2017 is the only trust anchor in
	  the shipped default now.

21 April 2020: George
	- Change default value for 'rrset-roundrobin' to yes.
	- Fix tests for new rrset-roundrobin default.

20 April 2020: Wouter
	- Fix #222: --enable-rpath, fails to rpath python lib.
	- Fix for count of reply states in the mesh.
	- Remove unneeded was_mesh_reply check.

17 April 2020: George
	- Add SNI support on more TLS connections (fixes #193).
	- Add SNI support to unbound-anchor.

16 April 2020: George
	- Add doxygen documentation for DSCP.

16 April 2020: Wouter
	- Fix help return code in unbound-control-setup script.
	- Fix for posix shell syntax for trap in nsd-control-setup.
	- Fix for posix shell syntax for trap in run_msg.sh test script.

15 April 2020: George
	- Fix #220: auth-zone section in config may lead to segfault.

7 April 2020: Wouter
	- Merge PR #214 from gearnode: unbound-control-setup recreate
	  certificates.  With the -r option the certificates are created
	  again, without it, only the files that do not exist are created.

6 April 2020: Ralph